# TSEC-Hacks-Endurance

./: .gitignore  AWS_DEPLOYMENT_CHECKLIST.md  AWS_DEPLOYMENT_SUMMARY.md  AWS_DEPLOYMENT_VISUALS.md  Dockerfile  INDEX_AWS_DOCUMENTATION.md  QUICK_START_AWS.md  README.md  README_AWS_DEPLOYMENT.md  aws-deploy.sh  investigate_scores.py  lambda-iam-policy.json  main.py  pyproject.toml  requirements.txt  verify_frontend_api.py
api/: main.py
chatbot/: __init__.py  api.py  chain.py  chain_s3.py  config.py
chatbot/rag_docs/: Employee_Statistics_2023.md  IT_Budget_Statement_2022-23.md  Procurement_Register_2022-23.md  WFH_Policy_2023.md
chatbot/vector_store/: chroma.sqlite3
demo/: __init__.py  sample_data.py
demo_docs/: UK_FOI2.md  UK_FOI_GOOD1.md
docs/: API_INTEGRATION.md  ARCHITECTURE_WALKTHROUGH.md  AWS_DEPLOYMENT_FREETIER_GUIDE.md  AWS_REASONING_INTEGRATION.md  BACKEND_SYSTEM_DESIGN.md  BENCHMARK_RESULTS.md  CHANGELOG_RESEARCH_UPGRADE.md  CLOUD_ENGINEER_GUIDE.md  CORRELATION_REPORT.md  FRONTEND_ENGINEER_GUIDE.md  METHODOLOGY_AUDIT.md  METRICS_SPECIFICATION.md  RED_TEAM_REPORT.md  SYSTEM_INTEGRATION_REPORT.md  XAI_RESEARCH_ANALYSIS.md  dashboard_features.md  demo_strategy.md  implementation_plan.md  implementation_roadmap.md  task.md
endurance/: __init__.py
endurance-sdk/: LICENSE  README.md  examples.py  pyproject.toml
endurance-sdk/endurance/: __init__.py  (+3 more)
frontend/: package.json  tailwind.config.js  vite.config.js
tests/: benchmark_halueval.py  demo_verification.py  red_team_attack.py  test_chatbot_flow.py  test_metrics.py  validate_correlations.py
(+32 files in other folders)
