[project]
name = "endurance"
version = "0.1.0"
description = "RAI Metrics Platform for Government Conversational AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
